fix pesky two scrollbars bug

--- a/src/components/File/milkdown.css
+++ b/src/components/File/milkdown.css
@@ -1,5 +1,5 @@
 .milkdown .editor {
-    height: 100vh;
+    /* height: 100vh; */
     /* set the background color: */
     background-color: #2e3440;
     color: white;
